# HADES-PathRAG

./: .coveragerc  .env.template  .gitignore  Modelfile.qwen2.5  Modelfile.qwen2.5-coder  PROJECT_STATUS.md  README.md  TODO.md  arangodb_setup.md  debug_memory_leak.py  device_implementation_readme.md  fix_chonky_batch.sh  html_adapter_errors.txt  mcp_test.py  model_config.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_chonky_batch_tests.sh  run_mcp_with_logs.py.new  run_tests.py  setup_dev_env.sh  start_mcp_server.py  start_server.py  test_docproc_end_to_end.py  test_html_cleaner.py  test_logging.py  test_markdown_processor.py
benchmark/: benchmark_cpu_vs_gpu_chunking.py  benchmark_haystack_engine.py
benchmark-results/: chunking_benchmark_20250513_071711.json  chunking_benchmark_20250513_103947.json  chunking_benchmark_20250513_105102.json
benchmark/validation/: benchmark_embedding_validator.py
data/: langchain_docling.html
dead-code/: ingestor.py  setup_ollama.sh
dead-code/cli/: ingestor.py
dead-code/db/: arango_connection.py
dead-code/docproc/: core_updated.py
dead-code/engine/: batch_types.py
dead-code/ingest/: README.md  __init__.py
dead-code/isne/: pipeline.py
dead-code/mcp/: server.py  xnx_tools.py
dead-code/old-pre-processors/: doc_parser.py  markdown_pre_processor.py  pdf_pre_processor.py
dead-code/scripts/: cleanup_model_server.py  compare_chunking.py  compare_pdf_processing.py  generate_chunked_sample.py  ingest_documentation.py  isolated_docproc_test.py  mock_repo.py  model_service_manager.py  pathrag-setup-db  pdf_pipeline.py  pdf_test_pipeline.py  pipeline_test.py  pipeline_test_with_text.py  query_documentation copy.py  query_documentation.py  reset_arango_db.py  run_docproc_chunking_pipeline.py  sample_pipeline.py  scrape_to_md.md  setup_arango_graph.py  simplified_chunking_output.py  standalone_docproc.py  start_vllm_server.py  test_chonky_model_load.py  test_cpu_ingest.py  test_docproc_structure.py  test_embedding.py  test_embedding_pipeline.py  test_gpu_chunking.py  test_path_ranking.py  test_txt_embedding_pipeline.py  verify_arangodb.py  verify_docproc_format.py
docs/: DeepResearchPrompt.md  README.md  alert_system_readme.md  api.md  chunking.md  cli_tools.md  embedding_implementation.md  gap_analysis.md  getting_started.md  index.html  ingestion_system.md  mcp_pathrag_architecture.md  model_engine.md  type_safety_guide.md  type_safety_tracking.md
docs/examples/: arango_pathrag_example.py  local_ollama_example.py  ollama_example.py
docs/ingestion/: application_model.md
docs/integration/: arango_setup.md  chunker_configuration.md  docker_deployment.md  github_ingestion.md  hades_integration.md  vllm_embeddings.md
docs/modules/: chunking_readme.md  docproc_readme.md  engine_overview.md
docs/old-docs/: README.md  domain_specific_ollama.py  ingesting_new_data.md  ingestion_pipeline.md  isne_ingest_example.py  mcp_recursive_implementation.md  ollama_setup.md  simple_domain_ollama.py
docs/xnx/: XnX_README.md  overview.md
examples/: arango_pathrag_example.py  llm_code_analysis_example.py
hades_pathrag/: __init__.py  typings.py
hades_pathrag/core/: __init__.py  config.py  factory.py  path_pruning.py  pathrag.py
hades_pathrag/embeddings/: __init__.py  base.py  enhanced_isne.py  factory.py  fallback.py  interfaces.py  isne.py  semantic.py
hades_pathrag/graph/: __init__.py  base.py  interfaces.py  networkx_impl.py
hades_pathrag/ingestion/: __init__.py  cli.py  config.py  embeddings.py  enhanced_embeddings.py  loaders.py  models.py  pipeline.py  pipeline_config.yaml  storage.py
hades_pathrag/mcp_server/: __init__.py  logging_setup.py  mcp_standalone.py
hades_pathrag/pathrag/: __init__.py
hades_pathrag/retrieval/: path_retrieval.py
hades_pathrag/storage/: __init__.py  arango.py  arango_enhanced.py  base.py  edge_types.py  factory.py  interfaces.py  path_traversal.py  transaction.py
hades_pathrag/typings/: __init__.py  stubs.py
hades_pathrag/utils/: __init__.py  text.py
implement-latter/xnx/: arango_adapter.py  xnx_pathrag.py
models/isne/: isne_model_code-enabled_v1_20250523_154400.pt  isne_model_latest.pt
ollama_test_env/: pyvenv.cfg
scripts/: check_isne_types.py  create_test_isne_model.py  debug_gpu_config.py  docproc_test.py  enforce_types.py  ingest_documentation.py  ingest_html_docs.py  ingest_repo.py  pathrag-ingest  pathrag-query  pathrag-reset-db  pathrag-verify-db  prodocs.py  query_documentation.py  reset_arango_db.py  run_isne_coverage.py  run_isne_with_alerts.py  setup_arango_graph.py  setup_mcp_server.sh  test_device_config.py  test_path_ranking.py  test_vllm_integration.py  type_check.py  validate_isne_embeddings.py  verify_arangodb.py
scripts/type_stubs/: networkx.pyi
src/: __init__.py
src/alerts/: __init__.py  alert_manager.py  alerts_readme.md
test-data/: ISNE_paper.pdf.txt  PathRAG_paper.pdf.json  PathRAG_paper.pdf.txt  PathRAG_paper_pdf.json  PathRAG_paper_pdf_content.txt  PathRAG_paper_pdf_result.json  PathRAG_paper_pdf_test.json  chunking.md  docproc.md  embedding_config.yaml  file_batcher.py  gpu_batch_pdf_7cc87cff_ISNE_paper.pdf_chunked.json  gpu_batch_pdf_ead853a1_PathRAG_paper.pdf_chunked.json  gpu_pdf_7cc87cff_ISNE_paper.pdf_chunked.json  pdf_adapter.py  pdf_adapter_mock.py  sample_text.txt  test.csv  test_pdf_adapter.py  test_pdf_adapter.py.no
test-output/: PathRAG_paper_pdf.json  batch_ISNE_paper_chunked.json  batch_PathRAG_paper_chunked.json  batch_processing_summary.json  docproc_markdown.json  file_batcher.json  file_batcher.py.json  file_batcher_python.json  langchain_docling.html.json  langchain_docling_html.json  processing_summary.json  python_chunked.json  single_ISNE_paper_chunked.json  single_PathRAG_paper_chunked.json  txt_chunked.json
tests/: conftest.py  docling_device_test.py  pytest.ini  run_docling_test_coverage.py  test_ast_chunker.py  test_chunk_integration.py  test_chunk_output_format.py  test_ollama_functions.py  test_ollama_integration.py  test_text_chunker.py
tools/: scrape_to_md.md  scrape_to_md.py
(+596 files in other folders)
