[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hades-pathrag"
description = "Path-based Retrieval Augmented Generation with ISNE embeddings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Todd", email = ""}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.8.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.60.0",
    "rich>=12.0.0",
    "python-arango>=7.5.0",
    "torch>=1.10.0",
    "torch-geometric>=2.0.0",
    "tiktoken>=0.3.0",  # For token counting/chunking
    "typer>=0.7.0",     # For CLI interface
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "types-networkx",
    "types-PyYAML",
    "types-tqdm",
    "types-requests",
    "types-setuptools",
    "ruff>=0.0.272",
    "pre-commit>=3.3.2",
]

[tool.setuptools_scm]
write_to = "hades_pathrag/_version.py"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
