[tool.poetry]
name = "hades-pathrag"
version = "0.1.0"
description = "HADES-PathRAG integration with XnX notation"
authors = ["HADES Team"]
readme = "README.md"
packages = [
  { include = "config", from = "src" },
  { include = "db", from = "src" },
  { include = "ingest", from = "src" },
  { include = "mcp", from = "src" },
  { include = "pathrag", from = "src" },
  { include = "utils", from = "src" },
  { include = "xnx", from = "src" },
  { include = "pre_processor", from = "src/ingest" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Core dependencies
aiohttp = "^3.8.5"
httpx = "^0.27.0"
fastapi = "^0.100.0"
pydantic = "^2.0.0"
uvicorn = "^0.23.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

# Database packages
python-arango = "^7.5.0"
networkx = "^3.0"
sqlalchemy = "^2.0.0"
tenacity = "^8.2.0"
pymongo = "^4.12.0"

# LLM API clients
openai = "^1.0.0"
aioboto3 = "^14.1.0"  # For AWS Bedrock and other AWS services

# ML dependencies for LLM serving (vLLM to be manually installed)
torch = ">=2.0.0"
transformers = "^4.35.0"
accelerate = "^0.26.0"
safetensors = "^0.4.0"
tiktoken = "^0.5.0"  # For tokenization

# Data processing and embedding
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"  # For visualizations
xxhash = "^3.0.0"  # For fast hashing operations

# Graph and vector search
hnswlib = "^0.8.0"  # Approximate nearest neighbors search
# networkx already listed above
fastapi-jsonrpc = "^2.2.0"  # JSON-RPC support for FastAPI

# Note: pytorch-geometric and nano-vectordb will need to be installed manually
# after the basic environment is set up

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"  # For testing async code
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.8.0"
types-requests = "^2.31.0"  # Type stubs for requests
types-setuptools = "^69.1.0"  # Type stubs for setuptools

[tool.black]
line-length = 88
target-version = ['py310']  # Updated to match minimum Python version
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Per-module options to help with incremental adoption
[[tool.mypy.overrides]]
module = "src.ingest.pre_processor.*"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.mcp.*"
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hades-mcp-server = "src.mcp.server:main"
